--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <h5>a,b and c vectors are said to be linear independent vector if there exist scalar α,β and γ(all zero) such that αa+βb+γc = 0 , α=β=γ=0 </h5>
 <h4>Volume of parallelopiped or Scalar triple product = a.(bxc)</h4>
 <h4>Vector triple product = ax(bxc)</h4>
-<img src="Vector2.jpg" width=2000 height=2000>
-<img src="Vector1.jpg" width=2000 height=2000>
+<img src="Vector2.jpg" width=1500 height=2000>
+<img src="Vector1.jpg" width=1500 height=2000>
+<h4><a href>click to see all notes </h4>
 </body>
 </html> 
