--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 <h4>Vector triple product = ax(bxc)</h4>
 <img src="Vector2.jpg" width=1500 height=2000>
 <img src="Vector1.jpg" width=1500 height=2000>
-<h4><a href>click to see all notes </h4>
+<h4><a href="maths.pdf">click to see all maths notes </h4>
 </body>
 </html> 
