--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
 <img src="Vector2.jpg" width=1500 height=2000>
 <img src="Vector1.jpg" width=1500 height=2000>
 <h4><a href="maths.pdf">click to see all maths notes </h4>
+<h4>RIP TO THE ONE WHO CAN RELATE THIS</h4>
+<img src="images (3).jpeg" width=1500 height=200>
 </body>
 </html> 
