--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 <h4><a href="maths.pdf">click to see all maths notes </a></h4>
 <h4>RIP TO THE ONE WHO CAN RELATE THIS</h4>
 <img src="images (3).jpeg" width=1500 height=2000>
-<iframe src="https://mathinsight.org/basic_integration_refresher></iframe>
+<iframe src="https://mathinsight.org/basic_integration_refresher"></iframe>
 </body>
 </html> 
