--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 <h4><a href="maths.pdf">click to see all maths notes </a></h4>
 <h4>RIP TO THE ONE WHO CAN RELATE THIS</h4>
 <img src="images (3).jpeg" width=2000 height=2000>
-<iframe src="https://www.sciencehq.com/math-formulas/integration-formula.html"></iframe>
+<iframe src="https://www.sciencehq.com/math-formulas/integration-formula.html" width=2000 height=2000></iframe>
 </body>
 </html> 
