--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
 <h4>RIP TO THE ONE WHO CAN RELATE THIS</h4>
 <img src="images (3).jpeg" width=1500 height=2000>
 <iframe src="https://www.sciencehq.com/math-formulas/integration-formula.html" width=1500 height=2000></iframe>
+<h4>stonk market</h4>
+<iframe src="https://in.tradingview.com/" width=1500 height=2000><iframe>
 </body>
 </html> 
