--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 <img src="images (3).jpeg" width=1500 height=2000>
 <iframe src="https://www.sciencehq.com/math-formulas/integration-formula.html" width=1500 height=2000></iframe>
 <h4>stonk market</h4>
-<iframe src="https://youtu.be/UnRxPrjJ8hQ" width=1500 height=2000></iframe>
+<iframe src="https://www.moneycontrol.com/" width=1500 height=2000></iframe>
 </body>
 </html> 
