--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 <iframe src="https://www.sciencehq.com/math-formulas/integration-formula.html" width=1500 height=2000></iframe>
 <h4>stonk market</h4>
 <iframe src="https://www.moneycontrol.com/" width=1500 height=2000></iframe>
-<video src="https://github.com/SJ-v-808/vectorcheat/blob/main/SampleVideo_1280x720_1mb.mp4" width=1280 height=720></video>
+<video controls><source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4"> </video>
 </body>
 </html> 
