--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <img src="images (3).jpeg" width=1500 height=2000>
 <iframe src="https://www.sciencehq.com/math-formulas/integration-formula.html" width=1500 height=2000></iframe>
 <h4>stonk market</h4>
-<iframe src="https://www.moneycontrol.com/" width=1800 height=5000></iframe>
+<iframe src="https://www.moneycontrol.com/" width=1800 height=10
+000></iframe>
 <video width=2000 height=2000 controls><source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4"> </video>
 </body>
 </html> 
