--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
 <h4>RIP TO THE ONE WHO CAN RELATE THIS</h4>
 <img src="images (3).jpeg" width=1500 height=2000>
 <iframe src="https://www.sciencehq.com/math-formulas/integration-formula.html" width=1500 height=2000></iframe>
+<textarea id="myTextarea">
+342 Alvin Road
+Ducksburg</textarea>
+<button type="button" onclick="myFunction()">Try it</button>
+<script>
+function myFunction(){
+var output = document.getElementById("myTextarea").value ;
+document.write(output);
+}
+</script>
 <h4>stonk market</h4>
 <iframe src="https://www.moneycontrol.com/" width=1600 height=100000></iframe>
 <video width=2000 height=2000 controls><source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4"> </video>
